finally pass all stages!!!!!!
 next step is test current stages again to make sure everything is ok and add bacteria part